add background card component

--- a/web/src/styles/utility.scss
+++ b/web/src/styles/utility.scss
@@ -39,7 +39,7 @@
   background-attachment: fixed;
 }
 
-$bg-filter-blur: blur(2px) grayscale(0.3);
+$bg-filter-blur: blur(2px) grayscale(0.8);
 .bg-filter-mute {
   background-image: url('/static/ainc-workspace-hero-dee943c5bfd8067ac48fc51ad5d8a893.jpeg');
   background-size: cover;
@@ -53,6 +53,7 @@ $bg-filter-blur: blur(2px) grayscale(0.3);
     height: 100%;
     background: inherit;
     z-index: -1;
+    background: rgba(150, 150, 150, 0.45);
     
     filter        : $bg-filter-blur;
     -moz-filter   : $bg-filter-blur;
