--- a/web/src/styles/card.scss
+++ b/web/src/styles/card.scss
@@ -1,3 +1,12 @@
+// -----------------------------------------------------------------------------
+@import "variables";
+@import "mixins"; 
+// -----------------------------------------------------------------------------
+
 .card-body--background-card {
   z-index: 1;
+}
+
+.card--equal-width {
+  max-width: 350px;
 }
