--- a/web/src/styles/utility.scss
+++ b/web/src/styles/utility.scss
@@ -1,3 +1,10 @@
+// -----------------------------------------------------------------------------
+@import "variables";
+@import "mixins"; 
+// -----------------------------------------------------------------------------
+
+
+
 
 .text-normal {
   text-transform: none !important;
@@ -61,7 +68,7 @@ $bg-filter-blur: blur(2px) grayscale(0.8);
     -o-filter     : $bg-filter-blur;
   }
 }
-// .bg-filter-mute::before{
-//   content: "";
-//   background: rgba(147, 147, 147, 0.65)
-// }
+
+.bg--dark-grey {
+  background-color: $brand-color2;
+}
