add feature card component

--- a/web/src/styles/variables.scss
+++ b/web/src/styles/variables.scss
@@ -26,6 +26,9 @@ $border-color: #ddd;
 $footer-text: #D1D2D4;
 $color-light-blue: #55CBF3;
 
+// BOOTSTRAP VARS
+$card-height: 100%;
+
 
 
 //== Typography Variable
