--- a/web/src/styles/card.scss
+++ b/web/src/styles/card.scss
@@ -10,3 +10,39 @@
 .card--equal-width {
   max-width: 350px;
 }
+
+.card--square-size {
+  width: 125px;
+  height: 125px;
+}
+
+.card__img--overlay {
+  color: white;
+  &:before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: -webkit-linear-gradient(left, rgba(255,0,0,0), #141823);
+    background: -o-linear-gradient(bottom, rgba(255,0,0,0), #141823);
+    background: -moz-linear-gradient(bottom, rgba(255,0,0,0), #141823);
+    background: linear-gradient(to bottom, rgba(255,0,0,0), #141823);
+  }
+}
+
+.card--gradient-bg {
+  position: relative;
+  margin: 0;
+}
+
+.card__gradient-bg {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: -webkit-linear-gradient(left, rgba(255,0,0,0), #141823);
+  background: -o-linear-gradient(bottom, rgba(255,0,0,0), #141823);
+  background: -moz-linear-gradient(bottom, rgba(255,0,0,0), #141823);
+  background: linear-gradient(to bottom, rgba(255,0,0,0), #141823);
+}
