--- a/web/src/styles/mixins.scss
+++ b/web/src/styles/mixins.scss
@@ -1,5 +1,5 @@
 @import "mixins/rfs"; // RFS mixin.
 @import "mixins/font"; // Font size
-@import "mixins/responsive"; // Font size
-@import "mixins/color"; // Font size
-@import "mixins/helpers"; // Font size
+@import "mixins/responsive"; // Responsiveness
+@import "mixins/color"; // Colors
+@import "mixins/helpers";
