/fellowship bottom created,  /portfolio created

--- a/web/src/styles/text.scss
+++ b/web/src/styles/text.scss
@@ -9,3 +9,14 @@
 .text--white {
   color: white;
 }
+.text--red {
+  color: $brand-color;
+}
+
+.link--red:hover {
+  color: $brand-color;
+}
+
+.link--bright-red:hover {
+  color: $brand-red-bright
+}
