minor fixes from redudancy

--- a/web/src/styles/text.scss
+++ b/web/src/styles/text.scss
@@ -19,7 +19,8 @@
 }
 
 .link--bright-red:hover {
-  color: $brand-red-bright
+  color: $brand-red-bright;
+}
 
 .text--brand {
   color: $brand-color;
