Added simple pagination to mobile view

--- a/web/src/templates/podcast/podcast.module.scss
+++ b/web/src/templates/podcast/podcast.module.scss
@@ -47,10 +47,16 @@
     @include screen-xs {
         font-size: 5vw;
     }
-
 }
 
-.page-number {
+.page-number-single {
+    display: none;
+    @include screen-xs {
+        display: flex;
+    }
+}
+
+.page-number-all {
     @include screen-xs {
         display: none;
     }
