--- a/web/src/pages/bootcamp/bootcamp.module.scss
+++ b/web/src/pages/bootcamp/bootcamp.module.scss
@@ -15,7 +15,10 @@
         margin-bottom: 50px;
         margin-top: 50px;
     }
+}
 
+.twoButtonsIcons {
+    max-width: 50px;
 }
 
 .answerHonestly {
@@ -64,6 +67,18 @@
         margin-left: 50px;
         margin-right: 50px;
         margin-bottom: 40px;
+    }
+}
+
+#stats {
+    padding-top: 50px;
+    padding-bottom: 50px;
+    .statsRow {
+        padding-top: 50px;
+        padding-bottom: 50px;
+    }
+    .button {
+        background-color: grey;
     }
 }
 
