--- a/web/src/styles/layout.scss
+++ b/web/src/styles/layout.scss
@@ -9,3 +9,7 @@
 .background--grey, .background--gray {
   background-color: $brand-color2;
 }
+
+.background--brand {
+  background-color: $brand-color;
+}
