--- a/web/src/pages/bootcamp/bootcamp.module.scss
+++ b/web/src/pages/bootcamp/bootcamp.module.scss
@@ -71,8 +71,6 @@
 }
 
 #stats {
-    padding-top: 50px;
-    padding-bottom: 50px;
     .statsRow {
         padding-top: 50px;
         padding-bottom: 50px;
@@ -82,7 +80,42 @@
     }
 }
 
-#still-unsure {
+
+.languages {
+    background-image: url(../../images/bootcamp/languages-bg.jpg)
+}
+
+#timeline {
+    Title {
+        position: absolute; 
+        top: 80%;
+        left: 0;
+        margin-left: -30px;
+        color: red;
+        font-size: 70;
+        letter-spacing: 4px;
+        text-transform: none;
+        
+        transform: rotate(270deg);
+        transform-origin: (0 0);
+
+        // @include screen-xs {
+        //   position: relative;
+        //   @include font-size(34);
+        //   @include transform(rotate(0));
+        //   top: 80%;
+        //   left: 10px;
+        //   letter-spacing: 4px;
+        // }
+    }
+}
+
+.stillUnsure {
+    background-image: url(../../images/bootcamp/alumni-bg.png);
+}
+
+.questions {
     background-image: url(../../images/bootcamp/faq-bg.jpg);
+    height: 350px;
 }
 
