--- a/web/src/pages/bootcamp/bootcamp.module.scss
+++ b/web/src/pages/bootcamp/bootcamp.module.scss
@@ -37,6 +37,10 @@
     }
 }
 
+.testimonials {
+    background-image: url(../../images/bootcamp/testimonials-bg.jpg);
+}
+
 .motivationalQuote {
     padding-top: 30px;
     padding-bottom: 30px;
