--- a/web/src/pages/bootcamp/Components/Shield.module.scss
+++ b/web/src/pages/bootcamp/Components/Shield.module.scss
@@ -1,5 +1,5 @@
 .shieldPanel {
-    background-image: url(../../images/bootcamp/shield.png);
+    background-image: url(../../../images/bootcamp/shield.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center center;
