--- a/web/src/pages/bootcamp/Components/Testimonial.module.scss
+++ b/web/src/pages/bootcamp/Components/Testimonial.module.scss
@@ -19,22 +19,29 @@
 
 .testimonialWindow {
     background-color: rgba(255, 255, 255, 0.8);
+    max-width: 75%;
+    margin-top: 5px;
 
-    &:before {
-        content: '';
-        display: block;
-        width: 0;
-        height: 0;
-        border-top: 40px solid transparent;
-        border-bottom: 40px solid transparent;
-        border-right: 40px solid rgba(255, 255, 255, 0.8);
-        position: absolute;
-        left: -25px;
-    }
+    // Remove this??
+    min-width: 708px;
+    min-height: 404px;
+
+    // &:before {
+    //     content: '';
+    //     display: block;
+    //     width: 0;
+    //     height: 0;
+    //     border-top: 40px solid transparent;
+    //     border-bottom: 40px solid transparent;
+    //     border-right: 40px solid rgba(255, 255, 255, 0.8);
+    //     position: absolute;
+    //     left: -25px;
+    // }
 
     .testimonial-window-text {
-        display: none;
+        max-width: 75%;
         margin: 3rem 5rem 5rem 5rem;
+        margin-bottom: 3rem;
         &.active {
           display: block;
         }
