--- a/web/src/components/VerticalTitle/VerticalTitle.module.scss
+++ b/web/src/components/VerticalTitle/VerticalTitle.module.scss
@@ -1,11 +1,11 @@
 .verticalTitle {
-    position: absolute; 
+    //position: absolute; 
     top: 80%;
     left: 0;
     margin-left: -30px;
     margin-top: 400px;
-    color: red;
-    font-size: 70;
+    color: red !important;
+    font-size: 4.5rem !important;
     letter-spacing: 4px;
     text-transform: none;
     
