--- a/web/src/pages/bootcamp/Components/Testimonial.module.scss
+++ b/web/src/pages/bootcamp/Components/Testimonial.module.scss
@@ -23,8 +23,8 @@
     margin-top: 5px;
 
     // Remove this??
-    min-width: 708px;
-    min-height: 404px;
+    width: 708px;
+    height: 404px;
 
     // &:before {
     //     content: '';
