--- a/web/src/components/UI/VerticalTitle/VerticalTitle.module.scss
+++ b/web/src/components/UI/VerticalTitle/VerticalTitle.module.scss
@@ -2,7 +2,7 @@
     left: 0;
     margin-left: 15px;
     margin-top: 400px;
-    color: red !important;
+    color: #C12029 !important;
     font-size: 4.5rem !important;
     letter-spacing: 4px;
     text-transform: none;
