--- a/web/src/pages/bootcamp/bootcamp.module.scss
+++ b/web/src/pages/bootcamp/bootcamp.module.scss
@@ -29,6 +29,12 @@
     background-image: url(../../images/bootcamp/testimonials-bg.jpg);
 }
 
+.whyAwesomeIncHeader {
+    background-image: url(../../images/bootcamp/awesome-inc-bg.jpg);
+    height: 28vh;
+    width: 80vh;
+}
+
 .jobGuarantee {
     background-image: url(../../images/bootcamp/job-bg.jpg);
     padding-bottom: 60px;
