--- a/web/src/pages/bootcamp/Components/SideNav.module.scss
+++ b/web/src/pages/bootcamp/Components/SideNav.module.scss
@@ -1,8 +1,19 @@
 .navContainer {
-    background-color: lightgray;
+    background-color:whitesmoke;
     position: fixed;
     float: right;
-    margin-top: 0px;
+    margin-top: -107px;
+    margin-right: -50px;
+    margin-left: 35px;
     z-index: 999;
     max-width: 250px;
+    border-top-left-radius: 8px;
+    border-bottom-left-radius: 8px;
+
+    nav {
+        padding-top: 5px;
+        padding-bottom: 5px;
+        padding-left: 5px;
+        padding-right: 45px;
+    }
 }
