--- a/web/src/styles/utility.scss
+++ b/web/src/styles/utility.scss
@@ -49,7 +49,7 @@ $bg-filter-blur: blur(2px) grayscale(0.8);
   background-size: cover;
   overflow: auto;
   position: relative;
-  z-index: -2;
+  z-index: 2; //-2 was making links unclickable, 2 gives the same effect and makes links work
   &:before {
     content: "";
     position: absolute;
