Updated employers and stats

--- a/web/src/pages/bootcamp/bootcamp.module.scss
+++ b/web/src/pages/bootcamp/bootcamp.module.scss
@@ -68,6 +68,9 @@
     }
 }
 
+.employerImg {
+    max-width: 50px;
+}
 
 .languages {
     background-image: url(../../images/bootcamp/languages-bg.jpg);
