--- a/web/src/pages/bootcamp/bootcamp.module.scss
+++ b/web/src/pages/bootcamp/bootcamp.module.scss
@@ -29,14 +29,9 @@
     background-image: url(../../images/bootcamp/testimonials-bg.jpg);
 }
 
-.whyAwesomeIncHeader {
-    background-image: url(../../images/bootcamp/awesome-inc-bg.jpg);
-    height: 28vh;
-    width: 80vh;
-}
-
 .jobGuarantee {
     background-image: url(../../images/bootcamp/job-bg.jpg);
+    background-size: cover;
     padding-bottom: 60px;
     padding-top: 20px;
 
