--- a/web/src/pages/bootcamp/bootcamp.module.scss
+++ b/web/src/pages/bootcamp/bootcamp.module.scss
@@ -27,6 +27,7 @@
 
 .testimonials {
     background-image: url(../../images/bootcamp/testimonials-bg.jpg);
+    background-size: cover;
 }
 
 .jobGuarantee {
@@ -100,6 +101,7 @@
 
 .stillUnsure {
     background-image: url(../../images/bootcamp/alumni-bg.png);
+    background-size: cover;
     height: 50vh;
 }
 
