--- a/web/src/pages/bootcamp/components/Shield/Shield.module.scss
+++ b/web/src/pages/bootcamp/components/Shield/Shield.module.scss
@@ -9,6 +9,7 @@
     grid-template-rows: auto;
 
     .shieldText {
+        display: flex;
         text-align: center;
         justify-self: center;
         align-self: center;
