Fixed why ainc header

--- a/web/src/pages/bootcamp/bootcamp.module.scss
+++ b/web/src/pages/bootcamp/bootcamp.module.scss
@@ -54,6 +54,13 @@
     }
 }
 
+.whyAwesomeIncHeader {
+    background-image: url(../../images/bootcamp/awesome-inc-bg.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 24vh;
+}
+
 #stats {
     .statsRow {
         padding-top: 50px;
