--- a/web/src/pages/bootcamp/components/SideNav/SideNav.module.scss
+++ b/web/src/pages/bootcamp/components/SideNav/SideNav.module.scss
@@ -16,4 +16,10 @@
         padding-left: 5px;
         padding-right: 45px;
     }
+
+    // @media only screen and (min-width: 820px) {
+    //     nav {
+    //         display: none;
+    //     }
+    // }
 }
