Updated testimonial component

--- a/web/src/pages/bootcamp/bootcamp.module.scss
+++ b/web/src/pages/bootcamp/bootcamp.module.scss
@@ -58,6 +58,7 @@
     background-image: url(../../images/bootcamp/awesome-inc-bg.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+    background-position-y: 10%;
     height: 24vh;
 }
 
