--- a/web/src/pages/bootcamp/components/Testimonial/Testimonial.module.scss
+++ b/web/src/pages/bootcamp/components/Testimonial/Testimonial.module.scss
@@ -11,9 +11,9 @@
         &:last-child {
           margin-bottom: 0;
         }
-        &.active {
-          animation: shadow-pulse 1.25s infinite;
-        }
+        // &.active {
+        //   animation: shadow-pulse 1.25s infinite;
+        // }
     }
 }
 
