--- a/web/src/pages/bootcamp/bootcamp.module.scss
+++ b/web/src/pages/bootcamp/bootcamp.module.scss
@@ -9,6 +9,12 @@
         padding-top: 70px;
         padding-bottom: 70px;
     }
+
+    .titleCol {
+        @media (min-width: 481px) {
+            margin-top: 100px;
+        }
+    }
 }
 
 .twoButtonsRow {
@@ -18,6 +24,27 @@
         color: white;
         margin-bottom: 50px;
         margin-top: 50px;
+    }
+}
+
+.leftButtonCol {
+    @media (min-width: 481px) {
+        margin-left: 150px;
+    }
+    @media (max-width: 480px) {
+        border-right: 0px;
+    }
+}
+
+.rightButtonCol {
+    @media (min-width: 481px) {
+        margin-right: 162px;
+        margin-left: -25px;
+        margin-top: -2px;
+        max-width: 70%;
+    }
+    @media (max-width: 480px) {
+        margin-top: 40px;
     }
 }
 
@@ -48,10 +75,14 @@
     }
 
     .jobGuaranteeText {
-        margin-left: 50px;
-        margin-right: 50px;
-        margin-bottom: 40px;
+       @media (min-width: 481px) {
+            margin-left: 70px;
+            margin-left: 70px;
+            margin-top: 30px;
+       }
     }
+
+
 }
 
 .whyAwesomeIncHeader {
