proven success added

--- a/web/src/pages/learn/courses.module.css
+++ b/web/src/pages/learn/courses.module.css
@@ -1,15 +1,12 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:300,regular,500,600,700,800,300italic,italic,500italic,600italic,700italic,800italic);
-
 * {
     font-family: "Open Sans", sans-serif;
     box-sizing: border-box;
 }
-
 .containter {
     padding-left: 15px;
     padding-right: 15px;
 }
-
 .heading-text {
     font-size: 2.9rem;
     line-height: 5.85rem;
@@ -19,20 +16,16 @@
     margin: 4%;
     text-align: center;
 }
-
 /*  \/ \/ \/ \/     */
-
 .flex-container {
     flex-wrap: wrap;
     display: flex;
     column-gap: 15px;
     row-gap: 15px;
 }
-
 .flex-item {
     flex: 49%; /* Changing this to 32% gives you three columns, 100% is one column */
 }
-
 .learn-press {
     background-color: #fff;
     padding-top: 20px;
@@ -42,12 +35,13 @@
     margin: 20px;
     text-align: center;
 }
-
+.call-action{
+    margin-bottom: 20px;
+}
 .logos {
     padding-top: 30px;
     padding-bottom: 50px;
 }
-
 .proven-container {
     background: url(../../images/learn/phone-booth-abstract.jpeg);
     filter: opacity(50%) blur(1pt);
@@ -63,5 +57,4 @@
     padding-left: 20px;
     padding-top: 20px;
 }
-
 /*  ^^^^^^  */
