--- a/web/src/pages/learn/adults/adults.module.scss
+++ b/web/src/pages/learn/adults/adults.module.scss
@@ -1,18 +1,30 @@
 @use '../../../styles/variables' as styles;
-@import '../../../styles/mixins.scss';
+// @import '../../../styles/mixins.scss';
 
-.all-padding {
-    @include screen-sm {
-        padding: 0 0 !important;
-    }
+// .all-padding {
+//     @include screen-sm {
+//         padding: 0 0 !important;
+//     }
+// }
+
+
+// .input[type="radio"]:checked {
+//     background-color: red;
+// }
+
+.sort-button {
+    background-color: white !important;
+    color: #ED3742 !important;
+    
 }
+.sort-button:hover {
+    background-color: #ED3742 !important;
+    color: white !important;
+    border-color: #ED3742 !important;
+  }
 
-.input[type="radio"]:checked {
-    background-color: red;
-}
-
-.selected {
-    background-color: #ED3742;
+.sort-button:visited {
+    background-color: red !important;
 }
 .cell {
     border: 1px solid #ddd;
