--- a/web/src/components/TeamMember/TeamMember.module.css
+++ b/web/src/components/TeamMember/TeamMember.module.css
@@ -14,8 +14,10 @@
 
 .name-hover {
   display: table;
-  width: 100%;
-  height: 100%;
+  width: 150%;
+  height: 150%;
+  padding-right: 35px;
+  padding-bottom: 40px;
 }
 
 .lgx-vertical {
@@ -23,8 +25,9 @@
   vertical-align: middle;
   text-align: center;
   color: #c12029;
-  font-size: 16px;
+  font-size: 14px;
   line-height: 2.4rem;
+
 }
 
 figure figcaption {
