--- a/web/src/pages/fellowship/fellowship.module.scss
+++ b/web/src/pages/fellowship/fellowship.module.scss
@@ -1,3 +1,5 @@
+@import "../../styles/main.scss";
+
 .img {
     margin: auto;
     display: block;
@@ -17,4 +19,20 @@ text-align: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
+}
+
+.icon-title {
+    margin-right: auto;
+    margin-left: auto;
+    width: 75%;
+    // display: flex;
+    font-size: 4.75vw;
+    text-align: center;
+    @include screen-lg {
+        font-size: 2vw;
+    }
+    @include screen-xs {
+        font-size: 5vw;
+    }
+    letter-spacing: .5px;
 }
