--- a/web/src/pages/bootcamp/components/Shield/Shield.module.scss
+++ b/web/src/pages/bootcamp/components/Shield/Shield.module.scss
@@ -1,9 +1,15 @@
+// -----------------------------------------------------------------------------
+@import "../../../../styles/mixins.scss";
+@import "../../../../styles/variables.scss"; 
+// -----------------------------------------------------------------------------
+
 .shieldPanel {
     background-image: url(../../../../images/bootcamp/shield.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center center;
     height: 220px;
+    width: 100%;
     display: grid;
     grid-template-columns: auto;
     grid-template-rows: auto;
@@ -13,6 +19,9 @@
         text-align: center;
         justify-self: center;
         align-self: center;
-        padding: 1.5rem 2.75rem 2.5rem 2.75rem;
+        @include screen-tablet-max {
+            @include font-size(12);
+        }
+        // padding: 1.5rem 2.75rem 2.5rem 2.75rem;
     }
 }
