add judges/team section for program guide

--- a/web/src/pages/program/program.module.css
+++ b/web/src/pages/program/program.module.css
@@ -3,7 +3,16 @@
     background-size: cover;
     background-position: center;
     height: 93vh;
-    @include screen-md {
-        height: 110vh;
-    }
+    
+}
+
+.details {
+    display: flex;
+}
+
+.tonights-judges {
+    background-color: #323232;
+}
+.support-sponsors {
+    display: grid;
 }
