--- a/web/src/pages/bootcamp/Components/sideNav.module.scss
+++ b/web/src/pages/bootcamp/Components/sideNav.module.scss
@@ -1,6 +1,6 @@
 // -----------------------------------------------------------------------------
-@import "../../../../styles/mixins.scss";
-@import "../../../../styles/variables.scss"; 
+@import "../../../styles/mixins.scss";
+@import "../../../styles/variables.scss"; 
 // -----------------------------------------------------------------------------
 
 .navContainer {
