--- a/web/src/components/Footer/Footer.module.scss
+++ b/web/src/components/Footer/Footer.module.scss
@@ -10,6 +10,8 @@ a {
 }
 
 .footer-background {
+  
+  width: 100vw;
   padding-top: 10rem;
   padding-bottom: 5rem;
   background-color: $brand-color2;
