--- a/web/src/components/Banner/Banner.module.scss
+++ b/web/src/components/Banner/Banner.module.scss
@@ -3,7 +3,7 @@
   padding: 5px;
   background-color: #f2dede;
   color: #842029;
-
+  position: relative;
   p {
     margin: 0;
     font-weight: normal;
