--- a/web/src/components/Banner/Banner.module.scss
+++ b/web/src/components/Banner/Banner.module.scss
@@ -4,6 +4,7 @@
   background-color: #f2dede;
   color: #842029;
   position: relative;
+  z-index: 10;
   p {
     margin: 0;
     font-weight: normal;
