--- a/web/src/pages/salesforce/salesforce.scss
+++ b/web/src/pages/salesforce/salesforce.scss
@@ -54,17 +54,12 @@
 #why-salesforce {
     .title, .paragraph {
         text-align: right;
-        margin-right: 300px;
     }
     .arrow-container {
         width: 150px;
         height: 100px;
-        margin-left: 640px;
+        // margin-left: 640px;
         margin-top: 20px;
-    }
-
-    .button {
-        margin-right: 300px;
     }
 }
 
