--- a/web/src/pages/salesforce/salesforce.scss
+++ b/web/src/pages/salesforce/salesforce.scss
@@ -66,8 +66,10 @@
 #what-salesforce {
     background-image: url("./images/red-wavy-bg.png");
     background-size: cover;
-    height: 100vh;
     width: 100vw;
+    padding-bottom: 5vh;
+    padding-top: 5vh;
+    margin-bottom: 5vh;
 
     .laptop-image {
         width: 600px;
