--- a/web/src/components/Forms/YouthProgramGuide.js/form.module.css
+++ b/web/src/components/Forms/YouthProgramGuide.js/form.module.css
@@ -1,3 +1,11 @@
 .form-container {
     background-color: #323232;
+    border: inherit;
+}
+
+.form-card {
+    margin-top: 90px;
+    box-shadow: 3px 3px 3px #323232;
+    border: #323232;
+    border-radius: 2%;
 }
