--- a/web/src/components/Header/header.scss
+++ b/web/src/components/Header/header.scss
@@ -25,7 +25,7 @@
     display: none;
     position: absolute;
     background-color: white;
-    box-shadow: 5% black;
+    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
     width: 180px;
     padding: 1%;
     > a {
