--- a/web/src/components/Header/header.scss
+++ b/web/src/components/Header/header.scss
@@ -22,7 +22,9 @@
   }
 
   > .hover-options {
-    display: none;
+    opacity: 0;
+    display: flex;
+    flex-direction: column;
     position: absolute;
     background-color: white;
     box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
@@ -43,8 +45,8 @@
 
   &:hover {
     > .hover-options {
-      display: flex;
-      flex-direction: column;
+      opacity: 1;
+      transition: opacity 0.5s ease-in-out;
     }
   }
 }
